# cmake_cv-ffmpeg-gtk-jni

./: CMakeLists.txt  CameraInput.cpp  README.md
cmake_modules/: FindOpenCV.cmake  FindOpenCV_1.cmake
